test_case/rust-lang_rust/50987_391222665.rs
plain
[01:03:57] 
[01:03:57] running 1453 tests
[01:04:03] ........................................................................................i...........
[01:04:11] ...........................................i........................................................
[01:04:15] ..................F.................................................................................
[01:04:19] ....................................................................................................
[01:04:23] ..............................................F.....................................................
[01:04:33] ....................................................................................................
[01:04:39] ....................................................................................................
[01:04:45] ....................................................................................................
[01:04:45] ....................................................................................................
[01:04:52] .............F.....................................F......................i.........................
[01:04:58] ...................................................i................................................
[01:05:04] ....................................................F..................ii...........................
[01:05:19] ...........................................................................i.................iiiiiii
[01:05:22] ii...................................................
[01:05:22] failures:
[01:05:22] 
[01:05:22] 
[01:05:22] ---- [ui] ui/empty-struct-unit-expr.rs stdout ----
[01:05:22] diff of stderr:
[01:05:22] 
[01:05:22] 7 LL |     let e2 = Empty2(); //~ ERROR expected function, found `Empty2`
[01:05:22] 8    |              ^^^^^^^^ not a function
[01:05:22] 9 
[01:05:22] - error[E0618]: expected function, found enum variant `E::Empty4`
[01:05:22] -   --> $DIR/empty-struct-unit-expr.rs:26:14
[01:05:22] -    |
[01:05:22] - LL |     Empty4
[01:05:22] -    |     ------ `E::Empty4` defined here
[01:05:22] - ...
[01:05:22] - LL |     let e4 = E::Empty4();
[01:05:22] -    |              ^^^^^^^^^^^ not a function
[01:05:22] - help: `E::Empty4` is a unit variant, you need to write it without the parenthesis
[01:05:22] -    |
[01:05:22] - LL |     let e4 = E::Empty4;
[01:05:22] - 
[01:05:22] - 
[01:05:22] - error[E0618]: expected function, found `empty_struct::XEmpty2`
[01:05:22] -   --> $DIR/empty-struct-unit-expr.rs:28:15 "/checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/empty-struct-unit-expr/a" "-Crpath" "-O" "-Zunstable-options" "-Lnative=/checkout/obj/build/x86_64-unknown-linux-gnu/native/rust-test-helpers" "-L" "/checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/empty-struct-unit-expr/auxiliary" "-A" "unused"
[01:05:22] ------------------------------------------
[01:05:22] 
[01:05:22] ------------------------------------------
[01:05:22] stderr:
[01:05:22] stderr:
[01:05:22] ------------------------------------------
[01:05:22] {"message":"expected function, found `Empty2`","code":{"code":"E0618","explanation":"\nAttempted to call something which isn't a function nor a method.\n\nErroneous code examples:\n\n